--- a/opinion_leader.ipynb
+++ b/opinion_leader.ipynb
@@ -130,7 +130,7 @@
     "merge_0_neg['cluster'] = kmeans.fit_predict(X)\n",
     "\n",
     "# Mappa i cluster a etichette personalizzate\n",
-    "cluster_mapping = {0: 'Weak opinion leader', 1: 'Strong opinion leader'}  # Personalizza le etichette come desiderato\n",
+    "cluster_mapping = {0: 'Weak opinion leader', 1: 'Strong opinion leader'} \n",
     "merge_0_neg['opinion_leader'] = merge_0_neg['cluster'].map(cluster_mapping)\n"
    ]
   },
@@ -165,7 +165,6 @@
     }
    ],
    "source": [
-    "# Grafico dei cluster\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.scatterplot(\n",
     "    data=merge_0_neg,\n",
@@ -183,7 +182,7 @@
     "plt.title('Clustering K-means degli opinion leader')\n",
     "plt.legend(title='Categorie di opinion leader', bbox_to_anchor=(1.05, 1), loc='upper left')\n",
     "plt.grid(True)\n",
-    "plt.tight_layout()  # Migliora la disposizione degli elementi nel grafico\n",
+    "plt.tight_layout() \n",
     "plt.show()"
    ]
   },
@@ -229,7 +228,6 @@
     "# Conta il numero di strong opinion leader\n",
     "num_strong_opinion_leaders = strong_opinion_leaders.shape[0]\n",
     "\n",
-    "# Stampa il numero di strong opinion leader\n",
     "print(f\"Numero di strong opinion leader: {num_strong_opinion_leaders}\")\n",
     "\n",
     "# Conta il numero di tweet per ciascun strong opinion leader\n",
@@ -253,7 +251,6 @@
     "           'Author ID', 'Tweet ID', 'Content', 'Description', \n",
     "           'Sentiment', 'Collection']\n",
     "\n",
-    "# Stampa la tabella utilizzando tabulate\n",
     "print(\"\\nInformazioni dettagliate dei tweet degli strong opinion leader:\")\n",
     "print(tabulate(table_data, headers=headers, tablefmt='grid'))\n",
     "\n",
@@ -267,7 +264,6 @@
     "# Intestazioni delle colonne per la tabella delle informazioni degli utenti\n",
     "user_headers = list(strong_opinion_leader_info.columns)\n",
     "\n",
-    "# Stampa la tabella utilizzando tabulate\n",
     "print(\"\\nInformazioni degli utenti strong opinion leader:\")\n",
     "print(tabulate(user_table_data, headers=user_headers, tablefmt='grid'))\n"
    ]
@@ -322,7 +318,7 @@
     "merge_0_pos['cluster'] = kmeans.fit_predict(X)\n",
     "\n",
     "# Mappa i cluster a etichette personalizzate\n",
-    "cluster_mapping = {0: 'Weak opinion leader', 1: 'Strong opinion leader'}  # Personalizza le etichette come desiderato\n",
+    "cluster_mapping = {0: 'Weak opinion leader', 1: 'Strong opinion leader'} \n",
     "merge_0_pos['opinion_leader'] = merge_0_pos['cluster'].map(cluster_mapping)"
    ]
   },
@@ -350,7 +346,6 @@
     }
    ],
    "source": [
-    "# Grafico dei cluster\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.scatterplot(\n",
     "    data=merge_0_pos,\n",
@@ -368,7 +363,7 @@
     "plt.title('Clustering K-means degli opinion leader')\n",
     "plt.legend(title='Categorie di opinion leader', bbox_to_anchor=(1.05, 1), loc='upper left')\n",
     "plt.grid(True)\n",
-    "plt.tight_layout()  # Migliora la disposizione degli elementi nel grafico\n",
+    "plt.tight_layout() \n",
     "plt.show()"
    ]
   },
@@ -445,7 +440,6 @@
     "# Conta il numero di strong opinion leader\n",
     "num_strong_opinion_leaders = strong_opinion_leaders.shape[0]\n",
     "\n",
-    "# Stampa il numero di strong opinion leader\n",
     "print(f\"Numero di strong opinion leader: {num_strong_opinion_leaders}\")\n",
     "\n",
     "# Conta il numero di tweet per ciascun strong opinion leader\n",
@@ -469,7 +463,6 @@
     "           'Author ID', 'Tweet ID', 'Content', 'Description', \n",
     "           'Sentiment', 'Collection']\n",
     "\n",
-    "# Stampa la tabella utilizzando tabulate\n",
     "print(\"\\nInformazioni dettagliate dei tweet degli strong opinion leader:\")\n",
     "print(tabulate(table_data, headers=headers, tablefmt='grid'))\n",
     "\n",
@@ -483,7 +476,6 @@
     "# Intestazioni delle colonne per la tabella delle informazioni degli utenti\n",
     "user_headers = list(strong_opinion_leader_info.columns)\n",
     "\n",
-    "# Stampa la tabella utilizzando tabulate\n",
     "print(\"\\nInformazioni degli utenti strong opinion leader:\")\n",
     "print(tabulate(user_table_data, headers=user_headers, tablefmt='grid'))\n"
    ]
@@ -538,7 +530,7 @@
     "merge_1_pos['cluster'] = kmeans.fit_predict(X)\n",
     "\n",
     "# Mappa i cluster a etichette personalizzate\n",
-    "cluster_mapping = {0: 'Weak opinion leader', 1: 'Strong opinion leader'}  # Personalizza le etichette come desiderato\n",
+    "cluster_mapping = {0: 'Weak opinion leader', 1: 'Strong opinion leader'}  \n",
     "merge_1_pos['opinion_leader'] = merge_1_pos['cluster'].map(cluster_mapping)"
    ]
   },
@@ -566,7 +558,6 @@
     }
    ],
    "source": [
-    "# Grafico dei cluster\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.scatterplot(\n",
     "    data=merge_1_pos,\n",
@@ -584,7 +575,7 @@
     "plt.title('Clustering K-means degli opinion leader')\n",
     "plt.legend(title='Categorie di opinion leader', bbox_to_anchor=(1.05, 1), loc='upper left')\n",
     "plt.grid(True)\n",
-    "plt.tight_layout()  # Migliora la disposizione degli elementi nel grafico\n",
+    "plt.tight_layout() \n",
     "plt.show()"
    ]
   },
@@ -625,7 +616,6 @@
     "# Conta il numero di strong opinion leader\n",
     "num_strong_opinion_leaders = strong_opinion_leaders.shape[0]\n",
     "\n",
-    "# Stampa il numero di strong opinion leader\n",
     "print(f\"Numero di strong opinion leader: {num_strong_opinion_leaders}\")\n",
     "\n",
     "# Conta il numero di tweet per ciascun strong opinion leader\n",
@@ -649,7 +639,6 @@
     "           'Author ID', 'Tweet ID', 'Content', 'Description', \n",
     "           'Sentiment', 'Collection']\n",
     "\n",
-    "# Stampa la tabella utilizzando tabulate\n",
     "print(\"\\nInformazioni dettagliate dei tweet degli strong opinion leader:\")\n",
     "print(tabulate(table_data, headers=headers, tablefmt='grid'))\n",
     "\n",
@@ -664,7 +653,6 @@
     "# Intestazioni delle colonne per la tabella delle informazioni degli utenti\n",
     "user_headers = list(strong_opinion_leader_info.columns)\n",
     "\n",
-    "# Stampa la tabella utilizzando tabulate\n",
     "print(\"\\nInformazioni degli utenti strong opinion leader:\")\n",
     "print(tabulate(user_table_data, headers=user_headers, tablefmt='grid'))\n"
    ]
@@ -719,7 +707,7 @@
     "merge_2_pos['cluster'] = kmeans.fit_predict(X)\n",
     "\n",
     "# Mappa i cluster a etichette personalizzate\n",
-    "cluster_mapping = {0: 'Weak opinion leader', 1: 'Strong opinion leader'}  # Personalizza le etichette come desiderato\n",
+    "cluster_mapping = {0: 'Weak opinion leader', 1: 'Strong opinion leader'} \n",
     "merge_2_pos['opinion_leader'] = merge_2_pos['cluster'].map(cluster_mapping)"
    ]
   },
@@ -747,7 +735,6 @@
     }
    ],
    "source": [
-    "# Grafico dei cluster\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.scatterplot(\n",
     "    data=merge_2_pos,\n",
@@ -765,7 +752,7 @@
     "plt.title('Clustering K-means degli opinion leader')\n",
     "plt.legend(title='Categorie di opinion leader', bbox_to_anchor=(1.05, 1), loc='upper left')\n",
     "plt.grid(True)\n",
-    "plt.tight_layout()  # Migliora la disposizione degli elementi nel grafico\n",
+    "plt.tight_layout() \n",
     "plt.show()"
    ]
   },
@@ -949,7 +936,6 @@
     "# Conta il numero di strong opinion leader\n",
     "num_strong_opinion_leaders = strong_opinion_leaders.shape[0]\n",
     "\n",
-    "# Stampa il numero di strong opinion leader\n",
     "print(f\"Numero di strong opinion leader: {num_strong_opinion_leaders}\")\n",
     "\n",
     "# Conta il numero di tweet per ciascun strong opinion leader\n",
@@ -973,7 +959,6 @@
     "           'Author ID', 'Tweet ID', 'Content', 'Description', \n",
     "           'Sentiment', 'Collection']\n",
     "\n",
-    "# Stampa la tabella utilizzando tabulate\n",
     "print(\"\\nInformazioni dettagliate dei tweet degli strong opinion leader:\")\n",
     "print(tabulate(table_data, headers=headers, tablefmt='grid'))\n",
     "\n",
@@ -987,7 +972,6 @@
     "# Intestazioni delle colonne per la tabella delle informazioni degli utenti\n",
     "user_headers = list(strong_opinion_leader_info.columns)\n",
     "\n",
-    "# Stampa la tabella utilizzando tabulate\n",
     "print(\"\\nInformazioni degli utenti strong opinion leader:\")\n",
     "print(tabulate(user_table_data, headers=user_headers, tablefmt='grid'))\n"
    ]
@@ -1042,7 +1026,7 @@
     "merge_3_pos['cluster'] = kmeans.fit_predict(X)\n",
     "\n",
     "# Mappa i cluster a etichette personalizzate\n",
-    "cluster_mapping = {0: 'Weak opinion leader', 1: 'Strong opinion leader'}  # Personalizza le etichette come desiderato\n",
+    "cluster_mapping = {0: 'Weak opinion leader', 1: 'Strong opinion leader'} \n",
     "merge_3_pos['opinion_leader'] = merge_3_pos['cluster'].map(cluster_mapping)"
    ]
   },
@@ -1070,7 +1054,6 @@
     }
    ],
    "source": [
-    "# Grafico dei cluster\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.scatterplot(\n",
     "    data=merge_3_pos,\n",
@@ -1088,7 +1071,7 @@
     "plt.title('Clustering K-means degli opinion leader')\n",
     "plt.legend(title='Categorie di opinion leader', bbox_to_anchor=(1.05, 1), loc='upper left')\n",
     "plt.grid(True)\n",
-    "plt.tight_layout()  # Migliora la disposizione degli elementi nel grafico\n",
+    "plt.tight_layout()\n",
     "plt.show()"
    ]
   },
@@ -1143,7 +1126,6 @@
     "# Conta il numero di strong opinion leader\n",
     "num_strong_opinion_leaders = strong_opinion_leaders.shape[0]\n",
     "\n",
-    "# Stampa il numero di strong opinion leader\n",
     "print(f\"Numero di strong opinion leader: {num_strong_opinion_leaders}\")\n",
     "\n",
     "# Conta il numero di tweet per ciascun strong opinion leader\n",
@@ -1167,10 +1149,8 @@
     "           'Author ID', 'Tweet ID', 'Content', 'Description', \n",
     "           'Sentiment', 'Collection']\n",
     "\n",
-    "# Stampa la tabella utilizzando tabulate\n",
     "print(\"\\nInformazioni dettagliate dei tweet degli strong opinion leader:\")\n",
     "print(tabulate(table_data, headers=headers, tablefmt='grid'))\n",
-    "\n",
     "\n",
     "# Filtra le informazioni degli utenti per gli strong opinion leader\n",
     "strong_opinion_leader_ids = strong_opinion_leaders['author_id'].unique()\n",
@@ -1182,7 +1162,6 @@
     "# Intestazioni delle colonne per la tabella delle informazioni degli utenti\n",
     "user_headers = list(strong_opinion_leader_info.columns)\n",
     "\n",
-    "# Stampa la tabella utilizzando tabulate\n",
     "print(\"\\nInformazioni degli utenti strong opinion leader:\")\n",
     "print(tabulate(user_table_data, headers=user_headers, tablefmt='grid'))\n"
    ]
@@ -1243,7 +1222,7 @@
     "merge_4_pos['cluster'] = kmeans.fit_predict(X)\n",
     "\n",
     "# Mappa i cluster a etichette personalizzate\n",
-    "cluster_mapping = {0: 'Weak opinion leader', 1: 'Strong opinion leader'}  # Personalizza le etichette come desiderato\n",
+    "cluster_mapping = {0: 'Weak opinion leader', 1: 'Strong opinion leader'}\n",
     "merge_4_pos['opinion_leader'] = merge_4_pos['cluster'].map(cluster_mapping)"
    ]
   },
@@ -1271,7 +1250,6 @@
     }
    ],
    "source": [
-    "# Grafico dei cluster\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.scatterplot(\n",
     "    data=merge_4_pos,\n",
@@ -1289,7 +1267,7 @@
     "plt.title('Clustering K-means degli opinion leader')\n",
     "plt.legend(title='Categorie di opinion leader', bbox_to_anchor=(1.05, 1), loc='upper left')\n",
     "plt.grid(True)\n",
-    "plt.tight_layout()  # Migliora la disposizione degli elementi nel grafico\n",
+    "plt.tight_layout() \n",
     "plt.show()"
    ]
   },
@@ -1449,7 +1427,6 @@
     "# Conta il numero di strong opinion leader\n",
     "num_strong_opinion_leaders = strong_opinion_leaders.shape[0]\n",
     "\n",
-    "# Stampa il numero di strong opinion leader\n",
     "print(f\"Numero di strong opinion leader: {num_strong_opinion_leaders}\")\n",
     "\n",
     "# Conta il numero di tweet per ciascun strong opinion leader\n",
@@ -1473,7 +1450,6 @@
     "           'Author ID', 'Tweet ID', 'Content', 'Description', \n",
     "           'Sentiment', 'Collection']\n",
     "\n",
-    "# Stampa la tabella utilizzando tabulate\n",
     "print(\"\\nInformazioni dettagliate dei tweet degli strong opinion leader:\")\n",
     "print(tabulate(table_data, headers=headers, tablefmt='grid'))\n",
     "\n",
@@ -1487,7 +1463,6 @@
     "# Intestazioni delle colonne per la tabella delle informazioni degli utenti\n",
     "user_headers = list(strong_opinion_leader_info.columns)\n",
     "\n",
-    "# Stampa la tabella utilizzando tabulate\n",
     "print(\"\\nInformazioni degli utenti strong opinion leader:\")\n",
     "print(tabulate(user_table_data, headers=user_headers, tablefmt='grid'))\n"
    ]
