--- a/analisi_inversa_NFT_tweet.ipynb
+++ b/analisi_inversa_NFT_tweet.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -219,31 +219,20 @@
     "    dates = [data_inizio_variazione, data_fine_variazione]\n",
     "    prices = [prezzo_inizio, prezzo_fine]\n",
     "\n",
-    "    # Tracciamo i dati\n",
-    "    plt.plot(dates, prices, marker='o', linestyle='-', label=f'Variazione prezzo - Token ID {token_id}')\n",
-    "    plt.title(f'NFT Price Trend - Token ID {token_id} del picco negativo ({data_inizio_variazione} - {data_fine_variazione})')\n",
+    "    # Grafico NFT price trend\n",
+    "    plt.plot(dates, prices, marker='o', linestyle='-', label=f'Variazione prezzo')\n",
+    "    plt.title(f'NFT Price Trend - Token ID {token_id} del picco positivo ({data_inizio_variazione} - {data_fine_variazione})')\n",
     "    plt.xlabel('Data')\n",
     "    plt.ylabel('Prezzo')\n",
     "    plt.legend()\n",
     "    plt.grid(True)\n",
     "    plt.show()\n",
     "    \n",
-    "    '''\n",
-    "    # Grafico NFT price trend\n",
-    "    plt.subplot(2, 1, 1)\n",
-    "    plt.plot(top_nft_positivi['data_inizio'], top_nft_positivi['prezzo_inizio'], marker='o', linestyle='-', color='tab:blue', label='Start Price')\n",
-    "    plt.plot(top_nft_positivi['data_fine'], top_nft_positivi['prezzo_fine'], marker='o', linestyle='-', color='tab:green', label='End Price')\n",
-    "    plt.title(f'NFT Price Trend - Token ID {token_id} del picco negativo ({data_inizio_variazione} - {data_fine_variazione})')\n",
-    "    plt.xlabel('Data')\n",
-    "    plt.ylabel('Prezzo')\n",
-    "    plt.legend()\n",
-    "    plt.grid(True)\n",
-    "    '''\n",
     "    # Grafico tweet count trend\n",
     "    plt.subplot(2, 1, 2)\n",
     "    tweet_counts = tweets_filtrati.resample('D', on='created_at').size()\n",
     "    plt.plot(tweet_counts.index, tweet_counts.values, marker='o', linestyle='-', color='tab:red', label='Tweet Count')\n",
-    "    plt.title(f'Tweet Count Trend - Token ID {token_id} del picco negativo ({data_inizio_variazione} - {data_fine_variazione})')\n",
+    "    plt.title(f'Tweet Count Trend - Token ID {token_id} del picco positivo ({data_inizio_variazione} - {data_fine_variazione})')\n",
     "    plt.xlabel('Data')\n",
     "    plt.ylabel('Numero tweet')\n",
     "    plt.legend()\n",
@@ -354,15 +343,18 @@
     "    \n",
     "    plt.figure(figsize=(10,6))\n",
     "\n",
+    "    # Creiamo una lista di date e prezzi\n",
+    "    dates = [data_inizio_variazione, data_fine_variazione]\n",
+    "    prices = [prezzo_inizio, prezzo_fine]\n",
+    "\n",
     "    # Grafico NFT price trend\n",
-    "    plt.subplot(2, 1, 1)\n",
-    "    plt.plot(top_nft_negativi['data_inizio'], top_nft_negativi['prezzo_inizio'], marker='o', linestyle='-', color='tab:blue', label='Start Price')\n",
-    "    plt.plot(top_nft_negativi['data_fine'], top_nft_negativi['prezzo_fine'], marker='o', linestyle='-', color='tab:green', label='End Price')\n",
+    "    plt.plot(dates, prices, marker='o', linestyle='-', label=f'Variazione prezzo')\n",
     "    plt.title(f'NFT Price Trend - Token ID {token_id} del picco negativo ({data_inizio_variazione} - {data_fine_variazione})')\n",
     "    plt.xlabel('Data')\n",
     "    plt.ylabel('Prezzo')\n",
     "    plt.legend()\n",
     "    plt.grid(True)\n",
+    "    plt.show()\n",
     "\n",
     "    # Grafico tweet count trend\n",
     "    plt.subplot(2, 1, 2)\n",
