--- a/analisi_inversa_NFT_tweet.ipynb
+++ b/analisi_inversa_NFT_tweet.ipynb
@@ -4,9 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analisi dei giorni tra la data inizio variazione e fine variazione dei picchi NFT con 3 giorni successivi (sia positivi che negativi) esaminando anche la sentiment analysis dei tweet e il punteggio totale (di ogni singolo tweet) che mi serve a capire quali sono stati i tweet più influenti\n",
+    "# Analisi: se gli NFT hanno influenzato i tweet\n",
+    "Analisi dei giorni tra la data inizio variazione e fine variazione dei picchi NFT con 3 giorni successivi (sia positivi che negativi) esaminando anche la sentiment analysis dei tweet e il punteggio totale (di ogni singolo tweet) che mi serve a capire quali sono stati i tweet più influenti\n",
     "\n",
-    "### Importazione librerie e datadrames"
+    "### Importazione librerie e dataframes"
    ]
   },
   {
@@ -16,12 +17,9 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from datetime import datetime, timedelta\n",
-    "from matplotlib.dates import DateFormatter, DayLocator\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
     "from datetime import datetime\n",
-    "from tabulate import tabulate\n",
+    "from matplotlib.dates import DateFormatter\n",
+    "import matplotlib.pyplot as plt\n",
     "from scipy.stats import pearsonr"
    ]
   },
@@ -31,7 +29,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Caricamento dei dataset\n",
     "top_nft_positivi = pd.read_csv(\"../dataframes/top_nft_positivi_df.csv\")\n",
     "top_nft_negativi = pd.read_csv(\"../dataframes/top_nft_negativi_df.csv\")\n",
     "tweets_sentiment = pd.read_csv(\"../dataframes/tweets_sentiment_df.csv\") \n",
@@ -43,6 +40,13 @@
     "top_nft_positivi['data_fine'] = pd.to_datetime(top_nft_positivi['data_fine'])\n",
     "top_nft_negativi['data_fine'] = pd.to_datetime(top_nft_negativi['data_fine'])\n",
     "tweets_sentiment['created_at'] = pd.to_datetime(tweets_sentiment['created_at'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Grafici picchi positivi"
    ]
   },
   {
@@ -287,7 +291,7 @@
     "    plt.gca().xaxis.set_major_formatter(date_formatter) \n",
     "    plt.xticks(rotation=10) \n",
     "    plt.show()\n",
-    "    #plt.tight_layout()\n",
+    "    # plt.tight_layout()\n",
     "    \n",
     "    # Grafico tweet count trend\n",
     "    plt.subplot(2, 1, 2)\n",
@@ -333,6 +337,13 @@
     "    fig.tight_layout()\n",
     "    plt.show()\n",
     "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Grafici picchi negativi"
    ]
   },
   {
