--- a/nft.ipynb
+++ b/nft.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dataset import ###"
+    "### Importazione librerie e datasets"
    ]
   },
   {
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Display of peaks for years and months ###"
+    "### Visualizzazione dei picchi per anni e mesi"
    ]
   },
   {
@@ -99,35 +99,22 @@
     }
    ],
    "source": [
-    "# Convert the 'date' column to datetime\n",
+    "# Converti la colonna 'date' in formato datetime\n",
     "nft_df['date'] = pd.to_datetime(nft_df['date'])\n",
     "\n",
-    "# Set 'date' as the index of the DataFrame\n",
+    "# Imposta 'date' come indice del DataFrame\n",
     "nft_df.set_index('date', inplace=True)\n",
     "\n",
-    "# Create the plot with larger dimensions\n",
-    "plt.figure(figsize=(16, 8))  # Increase the size of the figure\n",
+    "plt.figure(figsize=(16, 8))  \n",
     "plt.plot(nft_df.index, nft_df['usd_amount'], marker='o', linestyle='-')\n",
-    "\n",
-    "# Add a title to the plot\n",
-    "plt.title('Trend of NFT prices over time')\n",
-    "\n",
-    "# Add labels to the axes\n",
-    "plt.xlabel('Date')\n",
-    "plt.ylabel('USD Amount')\n",
-    "\n",
-    "# Format the x-axis to show the year and month\n",
+    "plt.title('Andamento dei prezzi NFT nel tempo')\n",
+    "plt.xlabel('Data')\n",
+    "plt.ylabel('Importo in USD')\n",
     "plt.gca().xaxis.set_major_formatter(mdates.DateFormatter('%Y-%m'))\n",
     "plt.gca().xaxis.set_major_locator(mdates.MonthLocator())\n",
-    "\n",
-    "# Rotate the x-axis labels\n",
     "plt.xticks(rotation=45)\n",
-    "\n",
-    "# Add a grid\n",
     "plt.grid(True)\n",
-    "\n",
-    "# Display the plot\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -147,14 +134,14 @@
    ],
    "source": [
     "# Verificare le colonne del DataFrame\n",
-    "print(nft_df.columns)"
+    "# print(nft_df.columns)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Display of peaks from December 1, 2020 ###"
+    "### Visualizzazione dei picchi a partire dal 1° dicembre 2020"
    ]
   },
   {
@@ -174,27 +161,26 @@
     }
    ],
    "source": [
-    "# Reset the index to make 'date' a standard column again\n",
+    "# Resetta l'indice per rendere 'date' una colonna standard\n",
     "nft_df.reset_index(inplace=True)\n",
     "\n",
-    "# Convert the 'date' column to datetime\n",
+    "# Converti la colonna 'date' in formato datetime\n",
     "nft_df['date'] = pd.to_datetime(nft_df['date'])\n",
     "\n",
-    "# Filter the trades from December 1, 2020 to the end of the dataset\n",
+    "# Filtra le transazioni dal 1 dicembre 2020 alla fine del dataset\n",
     "nft_df_filtered = nft_df[nft_df['date'] >= pd.Timestamp('2020-12-01')]\n",
     "\n",
-    "# Calculate the total USD amount per year and month\n",
+    "# Calcola l'importo totale in USD per anno e mese\n",
     "total_usd_per_year_month = nft_df_filtered.groupby([nft_df_filtered['date'].dt.year, nft_df_filtered['date'].dt.month])['usd_amount'].sum()\n",
     "\n",
-    "# Convert the index to a string format \"Year-Month\"\n",
+    "# Converte l'indice in formato stringa \"anno-mese\"\n",
     "index_string = total_usd_per_year_month.index.map(lambda x: f\"{x[0]}-{x[1]}\")\n",
     "\n",
-    "# Create the plot with larger dimensions\n",
     "plt.figure(figsize=(16, 8))\n",
     "plt.plot(index_string, total_usd_per_year_month.values, marker='o', linestyle='-')\n",
-    "plt.title('Total USD amount per year and month (from December 1, 2020)')\n",
-    "plt.xlabel('Year and month')\n",
-    "plt.ylabel('Total USD amount')\n",
+    "plt.title('Importo totale in USD per anno e mese (dal 1 dicembre 2020)')\n",
+    "plt.xlabel('Anno e mese')\n",
+    "plt.ylabel('Importo totale in USD')\n",
     "plt.xticks(rotation=45)\n",
     "plt.grid(True)\n",
     "plt.show()\n"
