--- a/variazione_nft.ipynb
+++ b/variazione_nft.ipynb
@@ -18,7 +18,6 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.dates as mdates\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
     "import os"
    ]
   },
@@ -26,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### nft_trades dataset import"
+    "### Importazione dataset nft_trades "
    ]
   },
   {
@@ -109,7 +108,7 @@
     }
    ],
    "source": [
-    "# we assiacure that there are no cells with null values in the date and text columns\n",
+    "# Ci assicuriamo che non ci sono celle con valuti nulli nelle colonne indicate\n",
     "nft_trades_df.dropna(axis=0 ,subset=['date', 'token_id', 'avg_price', 'transaction_hash', 'seller', 'buyer', 'currency', 'platform'],inplace = True)\n",
     "nft_trades_df.reset_index(drop= True,inplace=True)\n",
     "nft_trades_df.shape"
@@ -141,13 +140,13 @@
     }
    ],
    "source": [
-    "# Check for null values\n",
+    "# Controllo per valori nulli\n",
     "null_values = nft_trades_df.isnull().sum()\n",
-    "print(\"Null values in each column:\\n\", null_values)\n",
+    "print(\"Valori nulli in ogni colonna:\\n\", null_values)\n",
     "\n",
-    "# Check for duplicates\n",
+    "# Controllo per valori duplicati\n",
     "duplicate_rows = nft_trades_df.duplicated().sum()\n",
-    "print(\"Number of duplicate rows:\", duplicate_rows)"
+    "print(\"Numero di righe duplicate:\", duplicate_rows)"
    ]
   },
   {
@@ -179,9 +178,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setting dataset column types\n",
-    "#nft_trades_df = nft_trades_df.convert_dtypes()\n",
-    "#nft_trades_df.dtypes"
+    "# Impostazione dei tipi di colonna del dataset\n",
+    "# nft_trades_df = nft_trades_df.convert_dtypes()\n",
+    "# nft_trades_df.dtypes"
    ]
   },
   {
@@ -205,15 +204,6 @@
    "metadata": {},
    "source": [
     "### Calcolo e identificazione delle variazioni di prezzo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#print(filtrate_nft_trades_sorted.groupby('token_id').size())"
    ]
   },
   {
@@ -293,11 +283,11 @@
     "# Unire il prezzo medio con il DataFrame delle variazioni di prezzo\n",
     "price_changes_with_avg = price_changes.merge(average_prices, on='token_id', how='left')\n",
     "\n",
-    "# Selezionare le colonne desiderate\n",
+    "# Colonne desiderate\n",
     "result = price_changes_with_avg[['data_inizio', 'data_fine', 'token_id', 'price_trend', 'trend_change', 'prezzo_inizio', 'prezzo_fine', 'avg_price_avg', 'percentuale_variazione']]\n",
     "\n",
     "# Definire la soglia per la percentuale di variazione\n",
-    "threshold = 90  # Ad esempio, il 150%\n",
+    "threshold = 90 \n",
     "\n",
     "# Filtrare i risultati che superano la soglia in positivo o negativo\n",
     "result_filtered = result[(result['percentuale_variazione'] > threshold) | (result['percentuale_variazione'] < -threshold)]\n"
@@ -355,11 +345,8 @@
     }
    ],
    "source": [
-    "# Impostare la dimensione della figura\n",
     "plt.figure(figsize=(10,6))\n",
-    "\n",
-    "# Impostare i limiti dell'asse y\n",
-    "plt.ylim(-50000, 900000)\n",
+    "plt.ylim(-50000, 900000) # Limiti dell'asse y\n",
     "\n",
     "# Convertire le date nel formato matplotlib\n",
     "top_tokens['data_inizio'] = pd.to_datetime(top_tokens['data_inizio'])\n",
@@ -427,16 +414,11 @@
     }
    ],
    "source": [
-    "# Selezionare solo i picchi positivi\n",
+    "# Picchi positivi\n",
     "picchi_positivi = top_tokens[top_tokens['percentuale_variazione'] > 0]\n",
     "\n",
-    "# Impostare la dimensione della figura\n",
     "plt.figure(figsize=(10, 6))\n",
-    "\n",
-    "# Impostare i limiti dell'asse y\n",
     "plt.ylim(0, 500000)\n",
-    "\n",
-    "# Convertire le date nel formato matplotlib\n",
     "picchi_positivi['data_inizio'] = pd.to_datetime(picchi_positivi['data_inizio'])\n",
     "picchi_positivi['data_fine'] = pd.to_datetime(picchi_positivi['data_fine'])\n",
     "\n",
@@ -501,18 +483,15 @@
     }
    ],
    "source": [
-    "# Selezionare solo i picchi negativi\n",
+    "# Picchi negativi\n",
     "picchi_negativi = top_tokens[top_tokens['percentuale_variazione'] < 0]\n",
     "\n",
-    "# Impostare la dimensione della figura\n",
     "plt.figure(figsize=(10,6))\n",
-    "\n",
-    "# Impostare un intervallo più stretto per l'asse y\n",
     "y_min = picchi_negativi['prezzo_fine'].min() - 500\n",
     "y_max = picchi_negativi['prezzo_inizio'].max() + 500\n",
     "plt.ylim(y_min, y_max)\n",
     "\n",
-    "# Convertire le date nel formato matplotlib\n",
+    "\n",
     "picchi_negativi['data_inizio'] = pd.to_datetime(picchi_negativi['data_inizio'])\n",
     "picchi_negativi['data_fine'] = pd.to_datetime(picchi_negativi['data_fine'])\n",
     "\n",
@@ -580,20 +559,18 @@
     }
    ],
    "source": [
-    "# Selezionare solo i picchi negativi\n",
+    "# Picchi negativi\n",
     "picchi_negativi = top_tokens[top_tokens['percentuale_variazione'] < 0]\n",
     "\n",
-    "# Impostare la dimensione della figura\n",
     "plt.figure(figsize=(10, 6))\n",
     "\n",
     "# Impostare un intervallo più stretto per l'asse y\n",
     "y_min = 0\n",
-    "#y_min = picchi_negativi['prezzo_fine'].min() - 500\n",
+    "# y_min = picchi_negativi['prezzo_fine'].min() - 500\n",
     "y_max = 20\n",
-    "#y_max = picchi_negativi['prezzo_inizio'].max() + 500\n",
+    "# y_max = picchi_negativi['prezzo_inizio'].max() + 500\n",
     "plt.ylim(y_min, y_max)\n",
     "\n",
-    "# Convertire le date nel formato matplotlib\n",
     "picchi_negativi['data_inizio'] = pd.to_datetime(picchi_negativi['data_inizio'])\n",
     "picchi_negativi['data_fine'] = pd.to_datetime(picchi_negativi['data_fine'])\n",
     "\n",
@@ -703,7 +680,6 @@
     "print (top_nft_positivi)\n",
     "print ('---------')\n",
     "\n",
-    "# Visualizziamo i risultati\n",
     "top_nft_pos = top_nft_positivi.head(5)\n",
     "print(top_nft_pos)"
    ]
@@ -775,7 +751,7 @@
     "top_nft_negativi = top_nft_negativi.sort_values(by='variazione_per_sec', ascending=True)\n",
     "print (top_nft_negativi)\n",
     "print ('---------')\n",
-    "# Visualizziamo i risultati\n",
+    "\n",
     "top_nft_neg = top_nft_negativi.head(1)\n",
     "print(top_nft_neg)"
    ]
@@ -829,20 +805,13 @@
     "# Ordiniamo i risultati per variazione_per_sec in ordine decrescente\n",
     "picchi_positivi_sorted = picchi_positivi.sort_values(by='variazione_per_sec', ascending=False)\n",
     "\n",
-    "# Impostiamo la dimensione della figura\n",
     "plt.figure(figsize=(10,6))\n",
-    "\n",
-    "# Grafico a barre delle variazioni percentuali per secondo\n",
     "plt.bar(picchi_positivi_sorted['token_id'], picchi_positivi_sorted['variazione_per_sec'], color='limegreen', alpha=0.8)\n",
-    "\n",
-    "# Aggiungiamo etichette e titolo\n",
     "plt.xlabel('Token ID')\n",
     "plt.ylabel('Variazione percentuale per secondo')\n",
     "plt.title('Variazione percentuale per secondo per i top token con variazioni positive')\n",
     "plt.xticks(rotation=45)\n",
     "plt.grid(True)\n",
-    "\n",
-    "# Mostrare il grafico\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
@@ -896,9 +865,7 @@
     "# Ordiniamo i risultati per variazione_per_sec in ordine crescente\n",
     "picchi_negativi_sorted = picchi_negativi.sort_values(by='variazione_per_sec', ascending=True)\n",
     "\n",
-    "# Impostiamo la dimensione della figura\n",
     "plt.figure(figsize=(10,6))\n",
-    "\n",
     "plt.bar(picchi_negativi_sorted['token_id'], picchi_negativi_sorted['variazione_per_sec'], color='tomato', alpha=0.8)\n",
     "plt.xlabel('Token ID')\n",
     "plt.ylabel('Variazione percentuale per secondo')\n",
