--- a/tweet_SA.ipynb
+++ b/tweet_SA.ipynb
@@ -244,17 +244,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First tweet:\n",
+      "Primo tweet:\n",
       "2017-01-06 21:42:43\n",
       "\n",
-      "Last tweet:\n",
+      "Ultimo tweet:\n",
       "2022-02-23 23:57:21\n"
      ]
     }
@@ -265,10 +265,10 @@
     "primo_tweet = tweets_df.iloc[0]\n",
     "ultimo_tweet = tweets_df.iloc[-1]\n",
     "\n",
-    "print(\"First tweet:\")\n",
+    "print(\"Primo tweet:\")\n",
     "print(primo_tweet['created_at'])\n",
     "\n",
-    "print(\"\\nLast tweet:\")\n",
+    "print(\"\\nUltimo tweet:\")\n",
     "print(ultimo_tweet['created_at'])"
    ]
   },
