correlazione di pearson

--- a/analisi_inversa_NFT_tweet.ipynb
+++ b/analisi_inversa_NFT_tweet.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,14 +329,12 @@
     "\n",
     "    plt.title(f'Andamento NFT e Numero di Tweet - Token ID {token_id} del picco positivo ({data_inizio_variazione} - {data_fine_variazione})')\n",
     "\n",
-    "    \n",
     "    date_formatter = DateFormatter('%m-%d')  \n",
     "    ax1.xaxis.set_major_formatter(date_formatter)\n",
     "    plt.xticks(rotation=45)\n",
     "    ax1.grid(True)\n",
     "    fig.tight_layout()\n",
-    "    plt.show()\n",
-    "    \n"
+    "    plt.show()"
    ]
   },
   {
@@ -470,8 +468,103 @@
     "    plt.xticks(rotation=20)\n",
     "    ax1.grid(True)\n",
     "    fig.tight_layout()\n",
-    "    plt.show()\n",
-    "    \n"
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## correlazione di pearson e p-value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "la correlazione di pearson tra \"variazione_percentuale_secondo\" e \"numero_tweets\". picco per picco e il dataset globale"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### nft positivi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          data_inizio           data_fine  token_id price_trend  trend_change  \\\n",
+      "0 2021-08-15 07:05:16 2021-08-30 16:33:32      6563    positivo        152777   \n",
+      "1 2021-11-05 09:46:35 2021-11-05 18:42:28      4037    positivo        100401   \n",
+      "2 2021-02-25 14:23:29 2021-02-26 02:48:36     12247    positivo         17188   \n",
+      "3 2021-05-30 18:06:57 2021-06-01 06:39:14      8898    positivo        197896   \n",
+      "4 2021-08-25 04:45:19 2021-08-26 19:24:15      9728    positivo        214046   \n",
+      "\n",
+      "   prezzo_inizio  prezzo_fine  avg_price_avg  percentuale_variazione  \\\n",
+      "0          0.130     888888.0   37043.645984            6.837599e+08   \n",
+      "1          1.400     150000.0    5360.899107            1.071419e+07   \n",
+      "2          3.000     430000.0   63690.436667            1.433323e+07   \n",
+      "3          0.640      64842.0    2176.416933            1.013146e+07   \n",
+      "4          0.006        269.0      11.790029            4.483233e+06   \n",
+      "\n",
+      "      durata  variazione_per_sec  numero_tweets  corr_pearson   p-value  \n",
+      "0  1330096.0          514.068082         128501      0.997369  0.046189  \n",
+      "1    32153.0          333.225071          25202      0.757791  0.242209  \n",
+      "2    44707.0          320.603783           8208      0.622860  0.261726  \n",
+      "3   131537.0           77.023670          15556     -0.518420  0.481580  \n",
+      "4   139136.0           32.221951          38622     -0.784620  0.425716  \n",
+      "Correlazione di Pearson: 0.6228604590658581\n",
+      "Valore p: 0.2617260644315706\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lista per raccogliere il numero di tweet per ogni picco positivo\n",
+    "num_tweet_per_picco = []\n",
+    "\n",
+    "# Itera su ciascuna riga del dataset top_nft_positivi\n",
+    "for index, row in top_nft_positivi.iterrows():\n",
+    "    data_inizio_variazione = row['data_inizio']\n",
+    "    data_fine_variazione = row['data_fine']\n",
+    "    token_id = row['token_id']\n",
+    "    \n",
+    "    # Filtra i tweet che sono stati fatti nei giorni successivi all'inizio della variazione fino a 3 giorni dopo la fine della variazione\n",
+    "    tweets_filtrati = tweets_sentiment[\n",
+    "        (tweets_sentiment['created_at'] >= data_inizio_variazione) & \n",
+    "        (tweets_sentiment['created_at'] <= data_fine_variazione + pd.DateOffset(days=3))\n",
+    "    ]\n",
+    "    \n",
+    "    # Conta il numero totale di tweet per questo picco positivo\n",
+    "    numero_totale_tweet = len(tweets_filtrati)\n",
+    "    \n",
+    "    # Aggiungi i dati alla lista per l'analisi di correlazione\n",
+    "    num_tweet_per_picco.append(numero_totale_tweet)\n",
+    "\n",
+    "# Aggiungi la lista come una nuova colonna al dataset top_nft_positivi\n",
+    "top_nft_positivi['numero_tweets'] = num_tweet_per_picco\n",
+    "\n",
+    "# Calcola la correlazione di Pearson tra variazione_per_sec e numero_tweets\n",
+    "correlation, p_value = pearsonr(top_nft_positivi['variazione_per_sec'], top_nft_positivi['numero_tweets'])\n",
+    "\n",
+    "print(top_nft_positivi)\n",
+    "\n",
+    "print(f\"Correlazione di Pearson su tutto il dataframe: {correlation}\")\n",
+    "print(f\"Valore p su tutto il dataframe: {p_value}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nelle analisi statistiche come la correlazione di Pearson, è necessario avere almeno due punti dati (righe) per calcolare un coefficiente di correlazione significativo. Se top_nft_negativi contiene solo una riga di dati (come mostrato nel tuo output), pearsonr solleverà un errore perché non può calcolare il coefficiente di correlazione con dati insufficienti."
    ]
   }
  ],
